@@ -8,6 +8,8 @@
   * Changed the default FFT length in correlateTBN.py to 16 channels
   * Fixed a bug in lsl.common.sdf/sdfADP that caused parseSDF() to crash on SDFs generated by MCS when beam delays/gains were specified
   * Updated lsl.common.sdfADP to allow two beams at LWA-SV
+  * Cleaned up a few messages in lsl.sim.vis and lsl.reader.ldp so that they use the warnings module
+  * Made problems in lsl.statistics.robust raise ValueErrors if a problem is encountered
 
 1.2.0
   * Added a new lsl.common.adp module to help describe ADP
